* fixed misaligned button in start page

--- a/www/style.css
+++ b/www/style.css
@@ -517,6 +517,7 @@ Style for the about page
 	padding-top: 30px;
 	background-color: rgba(255, 255, 255, 0.75);
 	text-align: center;
+	width: 100%;
 }
 
 .about-page .landing-header .landing-header-action button {
